--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@ignite-ui/ts-config": "*",
     "@ignite-ui/eslint-config": "*",
